fix java api